--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Tenho uma mensagem pra você" />
+    <meta property="og:type" content="website" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/gift-box.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Congrats</title>
